[gd_scene load_steps=6 format=3]

[ext_resource type="Texture2D" uid="uid://dmc17mxboy2f0" path="res://Icons/burger.png" id="1_2i4wt"]
[ext_resource type="StyleBox" uid="uid://cklb76s6bhkr4" path="res://Events/Actions/thm_ActionUnselected.tres" id="1_yf3m7"]
[ext_resource type="Script" path="res://Events/Actions/gd_PropertyActionInterface.gd" id="2_ro3nc"]
[ext_resource type="PackedScene" path="res://Events/scn_PropertySelector.tscn" id="4_qhr5o"]
[ext_resource type="PackedScene" path="res://Events/scn_FieldMatcher.tscn" id="5_kpq2v"]

[node name="PropertyAction" type="PanelContainer"]
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_yf3m7")
script = ExtResource("2_ro3nc")

[node name="HorizontalLayout" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BurgerButton" type="Button" parent="HorizontalLayout"]
custom_minimum_size = Vector2(32, 30)
layout_mode = 2
icon = ExtResource("1_2i4wt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Mode" type="OptionButton" parent="HorizontalLayout"]
layout_mode = 2
item_count = 3
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Set"
popup/item_0/id = 0
popup/item_1/text = "Add"
popup/item_1/id = 1
popup/item_2/text = "Subtract"
popup/item_2/id = 2

[node name="PropertySelector" parent="HorizontalLayout" instance=ExtResource("4_qhr5o")]
layout_mode = 2
size_flags_horizontal = 1
mode = 1

[node name="SetAddLabel" type="Label" parent="HorizontalLayout"]
layout_mode = 2
text = "to"

[node name="FieldMatcher" parent="HorizontalLayout" instance=ExtResource("5_kpq2v")]
visible = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 1

[node name="SubtractLabel" type="Label" parent="HorizontalLayout"]
visible = false
layout_mode = 2
text = "from"
